<resources>
    <string name="app_name">Dort</string>
    <string name="Do_research_together">Do Research Together!</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="empty">empty</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="sign_up">Sign Up</string>
    <string name="forgot_passowrd">Forgot passowrd?</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_the_inputs_below_here">Please fill the inputs below here</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="textview">TextView</string>
    <string name="profile">profile</string>
    <string name="string_profile">profile</string>
    <string name="topics">Topics</string>

    <string name="todo">TODO</string>
    <string name="okokok">OKOKOK</string>
    <string name="match">Match</string>
    <string name="not">Not</string>
    <string name="feed">Feed</string>
    <string name="profilex">Profile</string>
    <string name="logout">LogOut</string>
    <string name="my_profile">My Profile</string>
    <string name="logoutx">Logout</string>
    <string name="setting">Setting</string>

    <string name="about_you">About you!</string>
    <string name="nsu_id">NSU ID</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ex_ml_ai">Ex: ML,AI</string>
    <string name="settings">Settings</string>
    <string name="describe_your_past_works">Describe your past works.</string>
    <string name="describe_your_current_works">Describe your current works.</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="message_as">sadsd</string>
    <string name="send">asdasdasd</string>
    <string name="message_asa">Message As</string>
    <string name="sendx">Send</string>
    <string name="report_comments">Report Comments.</string>
    <string name="video">Video</string>


</resources>