<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".settingsActivity">


    <TextView
        android:id="@+id/interestArea"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="@color/teal_700"
        android:paddingStart="10dp"
        android:text="Research Interest"


        android:textAlignment="center"

        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="@color/teal_200"
        android:text="Currently Working on"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:id="@+id/show"
        android:layout_width="385dp"
        android:layout_height="25dp"

        android:background="@color/teal_200"
        android:text="Worked On and Published research"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/research_interest"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"

        android:hint="@string/ex_ml_ai"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <EditText
        android:id="@+id/worked_on"
        android:layout_width="387dp"
        android:layout_height="159dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"

        android:hint="@string/describe_your_past_works"
        android:inputType="textLongMessage"
        android:paddingStart="6sp"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/current_work"
        android:layout_width="387dp"
        android:layout_height="159dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/describe_your_current_works"

        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:paddingStart="6sp"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>